<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sanzablancoaka2c.javaquiz.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/question1"
                android:textColor="@color/textColor"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/question1True"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerTrue" />

                <RadioButton
                    android:id="@+id/question1False"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerFalse" />
            </RadioGroup>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:src="@drawable/if_statement"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioGroup2">

                <RadioButton
                    android:id="@+id/question2A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2IntA" />

                <RadioButton
                    android:id="@+id/question2B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2IntB" />

                <RadioButton
                    android:id="@+id/question2C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2IntC" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/question3"
                android:textColor="@color/textColor"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3DataTypeA"
                android:id="@+id/question3IntCheckBox"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3DataTypeB"
                android:id="@+id/question3StringCheckBox"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3DataTypeC"
                android:id="@+id/question3BooleanCheckBox"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3DataTypeD"
                android:id="@+id/question3ClassCheckBox"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3DataTypeE"
                android:id="@+id/question3DoubleCheckBox"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:src="@drawable/for_loop"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question4EditText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/question5"
                android:textColor="@color/textColor"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/radioGroup5">

                <RadioButton
                    android:id="@+id/question5A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5StringA" />

                <RadioButton
                    android:id="@+id/question5B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5StringB" />

                <RadioButton
                    android:id="@+id/question5C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5StringC" />
            </RadioGroup>

            <Button
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkAnswers"
                android:layout_marginTop="20dp"
                android:text="@string/results" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
